--- a/manifest.json
+++ b/manifest.json
@@ -37,5 +37,6 @@
       },
       "system": "pf1"
     }
-  ]
+  ],
+  "download": "https://github.com/spydyrsbyte/foundry-spydyr-tools/archive/refs/heads/main.zip"	
 }
